--- a/clientSide/src/Components/Login.css
+++ b/clientSide/src/Components/Login.css
@@ -1,5 +1,8 @@
-body{
-    background-color: #F9E795;
+.Login{
+    margin-left: 870px;
+}
+.Subheading{
+    margin-left: 750px;
 }
 .Content{
     margin-top: 150px;
