--- a/clientSide/src/Components/Signup.css
+++ b/clientSide/src/Components/Signup.css
@@ -1,5 +1,9 @@
-body{
-    background-color: #F9E795;
+.sign{
+    margin-left:850px;   
+}
+.subheading{
+    margin-left:750px;   
+
 }
 .content{
     margin-top: 150px;
@@ -29,4 +33,4 @@ input{
 
 
 
-
+ 
