--- a/clientSide/src/Components/Homepage.css
+++ b/clientSide/src/Components/Homepage.css
@@ -1,7 +1,8 @@
 .maindiv{
     width:auto;
-    border: 2px black solid;
+    /* border: 2px black solid; */
     display:flex;
+    background-color: #90ebf1;
 }
 .Logo{
     width:80px;
@@ -11,60 +12,409 @@
     margin-left:850px;
     padding:30px 20px 0px 20px ;
     font-size:22px;
-    color:#00239CFF;
+    color:#000080;
 }
 
 .how{
     margin-left:20px;
     padding:30px 20px 0px 20px ;
     font-size:22px;
-    color:#00239CFF;
+    color:#000080;
 }
 .Psycho{
     margin-left:20px;
     padding:30px 20px 0px 20px ;
     font-size:22px;
-    color:#00239CFF;
+    color:#000080;
 }
 .free{
     margin-left:20px;
     padding:30px 20px 0px 20px ;
     font-size:22px;
-    color:#00239CFF;
+    color:#000080;
 }
 .signup{
     margin-left:20px;
     padding:30px 20px 0px 20px ;
     font-size:22px;
-    color:#00239CFF;
+    color:#000080;
 }
 .login{
     margin-left:20px;
     padding:30px 20px 0px 20px ;
     font-size:24px;
-    color:#00239CFF;
+    color:#000080;
 }
 .home:hover{
-    color:#F95700FF;
+    color:white;
     cursor: pointer;
 }
 .how:hover{
-    color:#F95700FF;
+    color:white;
     cursor: pointer;
 }
 .Psycho:hover{
-    color:#F95700FF;
+    color:white;
     cursor: pointer;
 }
 .free:hover{
-    color:#F95700FF;
+    color:white;
     cursor: pointer;
 }
 .signup:hover{
-    color:#F95700FF;
+    color:white;
     cursor: pointer;
 }
 .login:hover{
-    color:#F95700FF;
+    color:white;
     cursor: pointer;
+}
+.banner{
+    width:1815px;
+    height:800px;
+}
+.start{
+    font-size:20px;
+    background-color:rgb(144, 144, 245);
+    color:white;
+    padding:15px 25px 15px 25px;
+    border-radius:25px;
+    margin-left:850px;
+    margin-top:30px;
+}
+.change{
+    color:#000080;
+    margin-left:650px;
+    margin-top:30px;
+}
+.maincontainer{
+    display: flex;
+    margin-left:80px;
+}
+.start:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.imgphsy{
+    margin-top:50px;
+    margin-left:150px;
+    /* border: #000080 solid 2px; */
+}
+.img{
+    width:500px; 
+}
+.para{
+    /* border: #000080 solid 2px; */
+    margin-left:140px;
+    margin-top:50px;
+    color:#000080;
+    font-weight:bold;
+    font-size:24px;
+    width:700px;
+    text-align: center;
+}
+h4{
+    color:black;
+    font-size:16px;
+}
+.blog{
+    display: flex;
+    margin-top:220px;
+
+}
+.video{
+    border-radius:15px;
+}
+.audio{
+    border-radius:10px;
+    margin-left:40px;
+}
+.chat{
+    border-radius:25px;
+    margin-left:80px;
+}
+.sessions{
+    display: flex;
+}
+.vid{
+    margin-top:30px;
+    font-size:16px;
+    margin-left:10px;
+}
+.Aud{
+    margin-left:130px;
+    font-size:16px;
+    margin-top:30px;
+}
+.live{
+    margin-left:120px;
+    font-size:16px;
+    margin-top:30px;
+    height:50px;
+}
+.help{
+    font-size:30px;
+    color:#000080;
+    text-align: center;
+    margin-top:50px;
+    font-weight: bold;
+}
+.Anxiety{
+    margin-left:500px;
+    margin-top:40px;
+    padding:22px 22px 22px 22px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Anxiety:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Depress{
+    margin-left:50px;
+    margin-top:40px;
+    padding:22px 40px 22px 40px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Depress:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Issues{
+    margin-left:50px;
+    margin-top:40px;
+    padding:22px 22px 22px 22px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Issues:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.OCD{
+    margin-left:50px;
+    margin-top:40px;
+    padding:22px 55px 22px 55px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.OCD:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Psychosis{
+    margin-left:500px;
+    margin-top:40px;
+    padding:22px 49px 22px 49px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Psychosis:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Grief{
+    margin-left:50px;
+    margin-top:40px;
+    padding:22px 36px 22px 36px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Grief:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Couple{
+    margin-left:40px;
+    margin-top:40px;
+    padding:22px 40px 22px 40px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Couple:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.LGB{
+    margin-left:40px;
+    margin-top:40px;
+    padding:22px 40px 22px 40px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.LGB:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Teenage{
+    margin-left:600px;
+    margin-top:40px;
+    padding:22px 49px 22px 49px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Teenage:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Sexual{
+    margin-left:50px;
+    margin-top:40px;
+    padding:22px 36px 22px 36px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Sexual:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Bipolar{
+    margin-left:40px;
+    margin-top:40px;
+    padding:22px 35px 22px 35px;
+    font-size:18px;
+    background-color: rgb(144, 144, 245);
+    color:white;
+}
+.Bipolar:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.Start{
+    font-size:20px;
+    background-color:rgb(144, 144, 245);
+    color:white;
+    padding:15px 25px 15px 25px;
+    border-radius:25px;
+    margin-left:850px;
+    margin-top:50px;
+}
+.Start:hover{
+    color:#000080;
+    cursor: pointer;
+}
+.works{
+    text-align: center;
+    font-weight: bolder;
+    color:#000080;
+    margin-top:40px;
+    font-size:30px;
+    margin-left:35px;
+}
+.itwork{
+    margin-top:40px;
+}
+.calandar{
+    border-radius:60px;
+    margin-left:250px;
+    width:200px;
+}
+.arrow{
+    border-radius:60px;
+    width:150px;
+    margin-bottom:30px;
+}
+.person{
+    border-radius:60px;
+    width:200px;
+}
+.message{
+    border-radius:60px;
+    width:220px;
+}
+.clock{
+    border-radius:80px;
+    width:220px;
+}
+.function{
+    display: flex;
+    text-align: center;
+    margin-left:250px;
+    margin-top: 40px;
+}
+.Book{
+    color: #000080;
+    font-size:20px;
+}
+.pick{
+    margin-left:180px;
+    text-align: center;
+    color: #000080;
+    font-size:20px;
+}
+.join{
+    margin-left:120px;
+    text-align: center;
+    color: #000080;
+    font-size:20px;
+}
+.reschedule{
+    margin-left:180px;
+    text-align: center;
+    color: #000080;
+    font-size:20px;
+}
+.footer{
+    display: flex;
+    background-color: #90ebf1;
+    width:auto;
+    height:300px;
+    margin-top:40px;
+}
+.location{
+    margin-top:40px;
+    color:#000080;
+    margin-left:420px;
+}
+p{
+    font-size:16px;
+    text-align:center;
+}
+.about{
+    margin-left:10px;
+    font-size:24px;
+    font-weight:bold ;
+}
+.Location{
+    margin-top:40px;
+    color:#000080;
+    margin-left:250px;
+    text-align: center;
+}
+.loco{
+    font-size:24px;
+    font-weight:bold;
+}
+.google{
+    border-radius:1225px;
+    width:50px;
+}
+.face{
+    border-radius:1225px;
+    width: 50px;
+}
+.insta{
+    border-radius:1225px;
+    width: 50px;
+}
+.social{
+    font-size:24px;
+    font-weight:bold;
+}
+.media{
+    margin-top:40px;
+    color:#000080;
+    margin-left:250px;
+    text-align: center;
 }
